# model-as-service

./: .gitignore  CITATION.cff  Pipfile  README.md  bentofile.yaml  docker-compose.yml  locustfile.py  pyproject.toml  ruff.toml  service.py
docs/: doc.md
fastapi/: Dockerfile  main.py  requirements.txt
notebook/: sandbox_classifier.ipynb
src/: .bentoignore  bentofile.yaml  service.py
tests/: locustfile.py  request.sh
