[tool.poetry]
name = "model-as-service"
version = "0.1.0"
description = ""
authors = ["Piyush"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.42.3"
torch = "^2.3.1"
bentoml = "^1.2.19"


[tool.poetry.group.dev.dependencies]
locust = "^2.29.1"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
